:wrench: マニフェスト変更

--- a/viewer/manifest.jsonc
+++ b/viewer/manifest.jsonc
@@ -15,34 +15,39 @@
       "durationMs": 5000,
       // AIの解析結果を入れるところです  まだ未定
       "analysis": {
+        // セクションのタイトルをつけてもらう
+        "title": "Example title 0",
         // 事前に決められた行動に関するタグをつけてもらう
         "tag": ["eat", "drink", "sleep"],
         // AI に動画の内容を説明してもらう
-        "description": "Example description..."
+        "description": "Example description 0, Example description 0, Example description 0"
       }
     },
     {
       "elapsedMs": 32000,
       "durationMs": 8000,
       "analysis": {
+        "title": "Example title 1",
         "tag": ["eat", "drink", "sleep"],
-        "description": "Example description..."
+        "description": "Example description 1, Example description 1, Example description 1"
       }
     },
     {
       "elapsedMs": 49000,
       "durationMs": 4000,
       "analysis": {
+        "title": "Example title 2",
         "tag": ["eat", "drink", "sleep"],
-        "description": "Example description..."
+        "description": "Example description 2, Example description 2, Example description 2"
       }
     },
     {
       "elapsedMs": 66000,
       "durationMs": 1000,
       "analysis": {
+        "title": "Example title 3",
         "tag": ["eat", "drink", "sleep"],
-        "description": "Example description..."
+        "description": "Example description 3, Example description 3, Example description 3"
       }
     }
   ]
