--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "bierner.markdown-mermaid",
     "davidanson.vscode-markdownlint",
-    "lzm0x219.vscode-markdown-github"
+    "yzhang.markdown-all-in-one",
+    "bierner.github-markdown-preview"
   ]
 }
