🚧 一旦コミット

--- a/.textlintrc
+++ b/.textlintrc
@@ -1,6 +1,10 @@
 {
   "filters": {},
   "rules": {
-    "preset-ja-technical-writing": true
+    "preset-ja-technical-writing": {
+      "ja-no-mixed-period": {
+        "periodMark": "."
+      }
+    }
   }
 }
