--- a/.textlintrc
+++ b/.textlintrc
@@ -3,8 +3,11 @@
   "rules": {
     "preset-ja-technical-writing": {
       "ja-no-mixed-period": {
-        "periodMark": "."
+        "periodMark": "。"
       }
+    },
+    "preset-jtf-style": {
+      "3.1.1.全角文字と半角文字の間": false
     }
   }
 }
