--- a/.textlintrc
+++ b/.textlintrc
@@ -5,6 +5,9 @@
       "ja-no-mixed-period": {
         "periodMark": "。"
       },
+      "sentence-length": {
+        "max": 150
+      },
       "preset-jtf-style": {
         "3.1.1.全角文字と半角文字の間": false,
         "1.1.1.本文": false
@@ -12,6 +15,9 @@
       "no-mix-dearu-desumasu": {
         "preferInBody": "である",
         "strict": true
+      },
+      "no-doubled-joshi": {
+        "min_interval": 1
       }
     }
   }
