Add: AIT 論文追加 (#7)
* 論文追加

* Update docs/AIT/article/work.md

Co-authored-by: tomoakinakayama <148404219+tomoakinakayama@users.noreply.github.com>

* 活動方法追加

* 目標、方法の修正

* 追加あ

* 追加

* おわりにと、概要ちょっと追加

* 追加

* 画像必要そうなところ書いた。まっちーからのレビュー改善

* 「はじめに」改良

* デザイン追加

* UIについて詳細を追加

* Update docs/midterm.md

Co-authored-by: wappon28dev <wappon_28_dev@ruru.be>

* 配色について追加

* 余分な空白消去
特に何もしてない...

* ✨ figure

* 情報収集終わった
あとは書くだけ

* 調査・活動の実施内容と成果　動物園の議事録書いた。

* 鈴木どこいった

* 👽️ 先生による修正

Co-authored-by: knee0expert <123618777+knee0expert@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: wappon28dev <wappon_28_dev@ruru.be>

* Merge

* material designとフラットデザインの帳尻合わせ

* 話し言葉を改善

* コメント解消

* まっちーからの要望修正

* viewer 部分の文章 修正
ついでに画像いりそうな部分に<img>追加

* マッチーの要望解消、いろいろ改善

* 全体図追加

* 🍱 全体図, 意見交換会の様子の図

* 改善。

* Update docs/AIT/article/work.md

* Update docs/AIT/article/work.md

* コメント直した。

* 先行研究との違い

* ✨ Squasher Core の一致率

* ちょっと追加

* 🔨 不要なスペースの削除スクリプト

* タグ表追加

* おおまか脚注追加

* 小さな校正

* 文章修正

* 🐛 絶対値消した

* 🐛 有効数字 5 → 3

* 🍱 全体図

* 👽️ 先生との編集の適用

Co-authored-by: ROTO0504 <0504hiroosa@gmail.com>
Co-authored-by: tatsumi121 <111558291+tatsumi121@users.noreply.github.com>
Co-authored-by: tomoakinakayama <148404219+tomoakinakayama@users.noreply.github.com>

* ✨ 図式再挿入, 考察, おわりに

Co-authored-by: ROTO <ROTO0504@users.noreply.github.com>
Co-authored-by: knee0expert <knee0expert@users.noreply.github.com>

* 👽️ 先生との編集

Co-authored-by: tatsumi121 <111558291+tatsumi121@users.noreply.github.com>

* ✨ おわりに追加, その他修正

* 📝 細かい表現を修正

* 📝 参考文献追加

* ⏪ 必要だと → 必要がある

* ✏️ 制作 → 作成

* 📝 ない → 無い

---------

Co-authored-by: tomoakinakayama <148404219+tomoakinakayama@users.noreply.github.com>
Co-authored-by: ROTO0504 <88580483+ROTO0504@users.noreply.github.com>
Co-authored-by: wappon28dev <wappon_28_dev@ruru.be>
Co-authored-by: ROTO0504 <0504hiroosa@gmail.com>
Co-

--- a/.textlintrc
+++ b/.textlintrc
@@ -1,13 +1,26 @@
 {
-  "filters": {},
+  "filters": {
+    "comments": true
+  },
   "rules": {
     "preset-ja-technical-writing": {
       "ja-no-mixed-period": {
         "periodMark": "。"
+      },
+      "sentence-length": {
+        "max": 150
+      },
+      "preset-jtf-style": {
+        "3.1.1.全角文字と半角文字の間": false,
+        "1.1.1.本文": false
+      },
+      "no-mix-dearu-desumasu": {
+        "preferInBody": "である",
+        "strict": true
+      },
+      "no-doubled-joshi": {
+        "min_interval": 1
       }
-    },
-    "preset-jtf-style": {
-      "3.1.1.全角文字と半角文字の間": false
     }
   }
 }
