--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "scripts": {
-    "lint": "npx textlint ."
+    "lint": "npx textlint",
+    "clear-sp": "python ./scripts/clear_sp.py",
+    "clear-sp:article-ait": "yarn clear-sp ./docs/AIT/article/work.md ./tmp/work_cleared_sp.md"
   },
   "devDependencies": {
     "textlint": "^13.3.3",
     "textlint-rule-preset-ja-technical-writing": "^8.0.0"
   },
   "dependencies": {
+    "textlint-filter-rule-comments": "^1.2.2",
     "textlint-rule-preset-jtf-style": "^2.3.13"
   }
 }
