📝 テンプレート追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["lapsquash", "textlint", "YOLO", "squasher", "lapsq"]
+  "cSpell.words": [
+    "lapsquash",
+    "textlint",
+    "YOLO",
+    "squasher",
+    "lapsq",
+    "pagebreak"
+  ]
 }
